@@ -1,3 +1,8 @@
+[0, 15, 47]: 2018-07-31
+  - fix broken 3.6 manylinux1 (result of an unclean ``build`` (reported by 
+    `Roman Sichnyi <https://bitbucket.org/rsichnyi-gl/>`__)
+
+
 [0, 15, 46]: 2018-07-29
   - fixed DeprecationWarning for importing from ``collections`` on 3.7
     (issue 210, reported by `Reinoud Elhorst
